--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
                 integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
                 crossorigin="anonymous" referrerpolicy="no-referrer"/>
         </head>
-    <body oncontextmenu="return false" oncopy="return false" oncut="return false" onpaste="return false">
+    <body oncontextmenu="return false" oncopy="return false" oncut="return false" onpaste="return false" >
         <div class="container">
             <div class="main">
                 <!--banner-->
                 <section class="banner" id="banner">
                     <div class="content">
                         <div class="imgBx">
-                            <img src="Asset/VARIHAA.jpg">
+                            <img src="Asset/8.jpg">
                         </div>
                         <h3>Asep Rangga altriana</h3>
                         <div class="text-run">
@@ -26,7 +26,7 @@
                         <ul class="socialmedia">
                             <li><a href="https://facebook.com/asep.s.cgr"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                             <li><a href="https://twitter.com/aseprangga17"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="https://linkedin.com/asep-rangga-altriana"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href="https://linkedin.com/in/asep-rangga-altriana-037917218"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             <li><a href="https://instagram.com/trialtriana"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
@@ -41,7 +41,7 @@
                             <p>Lulusan SMKN 2 SUBANG jurusan Rekayasa Perangkat Lunak. Memiliki pengalaman sebagai tim Infrastruktur Teknologi selama 3 bulan saat praktek kerja industri, dan juga memiliki pengalaman sebagai Operatore Warehouse disebuah perusahaan manufacture otomotif.<br><br> Saya memiliki motivasi tinggi untuk mencapai tujuan dan cita cita saya dalam perkembangan teknologi informasi.</p>
                         </div>
                         <div class="imgBx">
-                            <img src="Asset/8.jpg">
+                            <img src="Asset/VARIHAA.jpg">
                         </div>
                     </div>
                 </section>
@@ -103,28 +103,6 @@
                         </div>
                     </div>
                 </section>
-                    <section class="contact adjust" id="contact">
-                        <div class="title">
-                            <h2>Let's say Hi</h2>
-                            <p>Tidak menerima 'P' ucapkan salam lalu perkenalkan diri</p>
-                        </div>
-                        <div class="contactForm">
-                            <div class="row">
-                                <input type="text" name="" placeholder="First name">
-                                <input type="text" name="" placeholder="Last name">
-                            </div>
-                            <div class="row">
-                                <input type="text" name="" placeholder="Email address">
-                                <input type="text" name="" placeholder="Mobile No.">
-                            </div>
-                            <div class="row2">
-                                    <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="row2">
-                                    <input type="submit" value="Send">
-                            </div>
-                        </div>
-                    </section>
                     <div class="copyright">
                         <p>Copyright © 2021 Asep Rangga</p>
                     </div>
@@ -154,13 +132,13 @@
             const  tulisan = document.querySelector(".text-second");
             const textload = () => {
                 setTimeout(() => {
-                    tulisan.textContent = "Just kid from subang";
+                    tulisan.textContent = "just kid from subang";
                 }, 0);
                 setTimeout(() => {
-                    tulisan.textContent = "Ordinary people";
+                    tulisan.textContent = "ordinary people";
                 }, 4000);
                 setTimeout(() => {
-                    tulisan.textContent = "Human";
+                    tulisan.textContent = "used to it";
                 }, 8000);
             }
             textload();
